--- a/index.html
+++ b/index.html
@@ -3,9 +3,21 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+  <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>ANKUSH PAHAL | PORTFOILIO</title>
+  <meta name="description"
+    content="Ankush Pahal Portfolio - Full Stack Developer & Creative Designer specializing in modern web experiences. Explore projects, skills, and professional journey." />
+  <meta name="keywords"
+    content="Ankush Pahal, artificail Intelligence,Machine Learning,Neural Networks,  Deep Learning,Computer Vision,NLP & LLMs,Reinforcement Learning,Natural Language Processing,ankushpahal, Web Developer, Full Stack Developer, React Developer, Frontend Developer, UX Designer, Portfolio, Software Engineer" />
+  <meta name="author" content="Ankush Pahal" />
+
+  <!-- Open Graph / Facebook -->
+  <meta property="og:type" content="website" />
+  <meta property="og:title" content="Ankush Pahal | Portfolio" />
+  <meta property="og:description"
+    content="Ankush Pahal Portfolio - Full Stack Developer & Creative Designer specializing in modern web experiences." />
+
+  <title>ANKUSH PAHAL | PORTFOLIO</title>
 </head>
 
 <body>
